Bug solved,Link wraper of loggout not needed

--- a/components/home/MainNavigation.module.css
+++ b/components/home/MainNavigation.module.css
@@ -32,3 +32,12 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.navlink {
+  background: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  padding: 0;
+}
